tests/routing/routes/application-extra-container.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: app-proxy
spec:
  image: image
  port: 8080
  extraContainers:
    - name: auth-proxy
      image: auth-proxy:1.0
      type: init
      ingressPort: 8443
      additionalPorts:
        - name: proxy
          port: 8443
          protocol: TCP
