tests/routing/routes/application.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: app-1
spec:
  image: gcr.io/google-samples/istio/helloserver:v0.0.1
  port: 8081
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: app-2
spec:
  image: gcr.io/google-samples/istio/helloserver:v0.0.1
  port: 9000
