tests/routing/routes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chainsaw-routing-routes
  labels:
    istio.io/dataplane-mode: ambient
