tests/routing/routes/patch-routing-change-hostname.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Routing
metadata:
  name: path-routing
spec:
  hostname: new-example.com
  routes:
    - pathPrefix: /app1
      targetApp: app-1
      rewriteUri: true
    - pathPrefix: /new-path
      targetApp: app-2
      rewriteUri: true
    - pathPrefix: /
      targetApp: app-1
