tests/routing/routes/patch-routing-change-path.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Routing
metadata:
  name: app-paths
spec:
  hostname: example.com
  routes:
    - pathPrefix: /app1
      targetApp: app-1
      rewriteUri: true
    - pathPrefix: /new-path
      targetApp: app-2
      rewriteUri: true
    - pathPrefix: /
      targetApp: app-1
