tests/routing/routes/patch-routing-remove-path.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Routing
metadata:
  name: path-routing
spec:
  hostname: new-example.com
  routes:
    - pathPrefix: /
      targetApp: app-1
