tests/routing/routes/routing-extra-container.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Routing
metadata:
  name: app-proxy-paths
spec:
  hostname: proxy.example.com
  routes:
    - pathPrefix: /proxy
      targetApp: app-proxy
