tests/routing/routes/routing-force-internal.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Routing
metadata:
  name: force-internal
spec:
  hostname: test.com
  forceInternal: true
  routes:
    - pathPrefix: /app1
      targetApp: app-1
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Routing
metadata:
  name: force-internal-gwapi
spec:
  hostname: testagain.com
  forceInternal: true
  routingProvider: Standard
  routes:
    - pathPrefix: /app1
      targetApp: app-1
