tests/routing/routes/routing.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Routing
metadata:
  name: path-routing
spec:
  hostname: example.com
  routes:
    - pathPrefix: /app1
      targetApp: app-1
    - pathPrefix: /app2
      targetApp: app-2
