tests/routing/routes/certificate-assert.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  labels:
    app.kubernetes.io/managed-by: skiperator
    skiperator.kartverket.no/controller: routing
    skiperator.kartverket.no/source-namespace: chainsaw-routing-routes
  name: chainsaw-routing-routes-app-routing-ingress
  namespace: istio-gateways
spec:
  dnsNames:
    - example.com
  issuerRef:
    kind: ClusterIssuer
    name: cluster-issuer
  secretName: chainsaw-routing-routes-app-routing-gateway
