tests/routing/routes/gateway-assert.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: app-routing-gateway
spec:
  selector:
    app: istio-ingress-external
  servers:
    - hosts:
        - example.com
      port:
        name: http
        number: 80
        protocol: HTTP
    - hosts:
        - example.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: chainsaw-routing-routes-app-routing-gateway
        mode: SIMPLE
