tests/routing/routes/patch-routing-change-hostname-assert.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  labels:
    app.kubernetes.io/managed-by: skiperator
    skiperator.kartverket.no/controller: routing
    skiperator.kartverket.no/source-namespace: ($namespace)
  name: chainsaw-routing-routes-app-paths-routing-ingress-b1dffede
  namespace: istio-gateways
spec:
  dnsNames:
    - new-example.com
  issuerRef:
    kind: ClusterIssuer
    name: cluster-issuer
  secretName: chainsaw-routing-routes-app-paths-routing-ingress-b1dffede

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: app-paths-routing-ingress
spec:
  selector:
    app: istio-ingress-external
  servers:
    - hosts:
        - new-example.com
      port:
        name: http
        number: 80
        protocol: HTTP
    - hosts:
        - new-example.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: chainsaw-routing-routes-app-paths-routing-ingress-b1dffede
        mode: SIMPLE

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-paths-routing-ingress
spec:
  exportTo:
    - .
    - istio-system
    - istio-gateways
  gateways:
    - app-paths-routing-ingress
  hosts:
    - new-example.com
  http:
    - match:
        - port: 80
          withoutHeaders:
            :path:
              prefix: /.well-known/acme-challenge/
      name: redirect-to-https
      redirect:
        redirectCode: 308
        scheme: https
    - match:
        - port: 443
          uri:
            prefix: /app1
      rewrite:
        uri: /
      name: app-1
      route:
        - destination:
            host: app-1
            port:
              number: 8000
    - match:
        - port: 443
          uri:
            prefix: /new-path
      rewrite:
        uri: /
      name: app-2
      route:
        - destination:
            host: app-2
            port:
              number: 9000
    - match:
        - port: 443
          uri:
            prefix: /
      name: app-1
      route:
        - destination:
            host: app-1
            port:
              number: 8000
