tests/routing/routes/patch-routing-change-path-assert.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: app-paths-routing-ingress
spec:
  exportTo:
    - .
    - istio-system
    - istio-gateways
  gateways:
    - app-paths-routing-ingress
  hosts:
    - example.com
  http:
    - match:
        - port: 80
          uri:
            prefix: /.well-known/acme-challenge/
      name: redirect-to-https
      redirect:
        redirectCode: 308
        scheme: https
    - match:
        - port: 443
          uri:
            prefix: /app1
      rewrite:
        uri: /
      name: app-1
      route:
        - destination:
            host: app-1
            port:
              number: 8000
    - match:
        - port: 443
          uri:
            prefix: /new-path
      rewrite:
        uri: /
      name: app-2
      route:
        - destination:
            host: app-2
            port:
              number: 9000
    - match:
        - port: 443
          uri:
            prefix: /
      name: app-1
      route:
        - destination:
            host: app-1
            port:
              number: 8000
