tests/routing/routes/patch-routing-remove-path-assert.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-paths-app-1-istio-ingress
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-gateways
          podSelector:
            matchLabels:
              app: istio-ingress-external
      ports:
        - port: 8000
          protocol: TCP
        - port: 15008
          protocol: TCP
  podSelector:
    matchLabels:
      app: app-1
  policyTypes:
    - Ingress

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: app-paths-routing-ingress
spec:
  exportTo:
    - .
    - istio-system
    - istio-gateways
  gateways:
    - app-paths-routing-ingress
  hosts:
    - new-example.com
  http:
    - match:
        - port: 80
      name: redirect-to-https
      redirect:
        redirectCode: 308
        scheme: https
    - match:
        - port: 443
          uri:
            prefix: /
      name: app-1
      route:
        - destination:
            host: app-1
            port:
              number: 8000
