tests/routing/routes/patch-routing-remove-path-error.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: path-routing-app-2-istio-ingress
