tests/routing/routes/routing-force-internal-assert.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: force-internal-routing-ingress
spec:
  selector:
    app: istio-ingress-internal
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: force-internal-app-1-istio-ingress
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-gateways
          podSelector:
            matchLabels:
              app: istio-ingress-internal
  podSelector:
    matchLabels:
      app: app-1

---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: force-internal-gwapi-routing-listener-773b3e048ecaa632
spec:
  parentRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: istio-internal
    namespace: istio-gateways
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: force-internal-gwapi-app-1-istio-ingress
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-gateways
          podSelector:
            matchLabels:
              app: istio-ingress-internal
  podSelector:
    matchLabels:
      app: app-1
  policyTypes:
    - Ingress
