tests/routing/routes/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: routes
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespace: chainsaw-routing-routes
  steps:
    - try:
        - apply:
            file: namespace.yaml
        - apply:
            file: application.yaml
        - apply:
            file: routing.yaml
        - assert:
            file: routing-assert.yaml
    - try:
        - apply:
            file: application-extra-container.yaml
        - apply:
            file: routing-extra-container.yaml
        - assert:
            file: routing-extra-container-assert.yaml
    - try:
        - apply:
            file: patch-application-change-port.yaml
        - assert:
            file: patch-application-change-port-assert.yaml
    - try:
        - apply:
            file: patch-routing-change-path.yaml
        - assert:
            file: patch-routing-change-path-assert.yaml
    - try:
        - delete:
            ref:
              apiVersion: skiperator.kartverket.no/v1alpha1
              kind: Routing
              name: app-paths
        - apply:
            file: patch-routing-change-hostname.yaml
        - assert:
            file: patch-routing-change-hostname-assert.yaml
    - try:
        - apply:
            file: patch-routing-remove-path.yaml
        - assert:
            file: patch-routing-remove-path-assert.yaml
        - error:
            file: patch-routing-remove-path-error.yaml
    - try:
        - create:
            file: routing-force-internal.yaml
        - assert:
            file: routing-force-internal-assert.yaml
